--- a/posts/2015-04-07.md
+++ b/posts/2015-04-07.md
@@ -96,7 +96,7 @@ Like in incremental dataflow, an differential dataflow operator only needs to up
 
 ## Implementation
 
-Let's go through a simple implementation of a differentail dataflow operator (in Rust).
+Let's go through a simple implementation of a differential dataflow operator (in Rust).
 
 ### Representing collections
 
@@ -127,7 +127,7 @@ trait Difference<T, V> {
 }
 ```rust
 
-In the `Difference` trait, the `setd` method just internalizes the suppied vector of updates and the `getd` method just returns the slice corresponding to the requested index.
+In the `Difference` trait, the `setd` method just internalizes the supplied vector of updates and the `getd` method just returns the slice corresponding to the requested index.
 
 The method names have `c` and `d` suffixes so that I don't have to show you Rust's name resolution. It isn't that horrible, but it is distracting I'll probably just end up changing the traits anyhow.
 
@@ -258,7 +258,7 @@ Next we see what happens when we remove the length-one strings: we lose any reco
 
     difference[(0, 1)] : [(("length: 1", 2), -1)]
 
-The next change is in a different coordinate, and doesn't include the removal of the length-one strings that occurs at `(0, 1)`. Rather, it removes one of the two length-one strings and decrements the number of the other by one (though two occurences of "c" should still remain). The result is one distinct length-one string, and the way differential dataflow represents that is to subtract one record and add the other.
+The next change is in a different coordinate, and doesn't include the removal of the length-one strings that occurs at `(0, 1)`. Rather, it removes one of the two length-one strings and decrements the number of the other by one (though two occurrences of "c" should still remain). The result is one distinct length-one string, and the way differential dataflow represents that is to subtract one record and add the other.
 
     difference[(1, 0)] : [(("length: 1", 1), 1), (("length: 1", 2), -1)]
 
