--- a/posts/2015-04-11.md
+++ b/posts/2015-04-11.md
@@ -310,7 +310,7 @@ The next step is to create the extender from `a` to `(a,b)`. We just need to pai
     let mut pairs = stream.extend(ext_b).flatten();
 ```
 
-That `flatten()` method simply converts a `Stream<G, (P, Vec<E>)>` to a `Stream<G, (P, E)>`. It is just 17 lines of code somewhere, so hooray for timely dataflow being easy to use (succint, at least).
+That `flatten()` method simply converts a `Stream<G, (P, Vec<E>)>` to a `Stream<G, (P, E)>`. It is just 17 lines of code somewhere, so hooray for timely dataflow being easy to use (succinct, at least).
 
 The next step is to create the extenders from pairs `(a,b)` to triples `((a,b),c)`. There are going to be two extenders, as we want values `c` such that both `(a,c)` and `(b,c)` are present in the graph. Each extender needs to take an `(a,b)` and identify an edge source, and there only two choices.
 
