--- a/posts/2015-04-19.md
+++ b/posts/2015-04-19.md
@@ -97,7 +97,7 @@ The point at which the dataflow graph first comes in to existence is when we wra
 let mut root = GraphRoot::new(communicator);
 ```
 
-A `GraphRoot` is pretty simple, actually. It is the simplest implementator of the `GraphBuilder` trait, whose main role in life is to hand back references to a `Communicator` so that we can make channels.
+A `GraphRoot` is pretty simple, actually. It is the simplest implementor of the `GraphBuilder` trait, whose main role in life is to hand back references to a `Communicator` so that we can make channels.
 
 There are much more advanced and interesting, implementors of `GraphBuilder`. Let's see one now!
 
