--- a/posts/2015-05-04.md
+++ b/posts/2015-05-04.md
@@ -51,7 +51,7 @@ unsafe fn typed_to_bytes<T>(slice: &[T]) -> &[u8] {
 
 Notice the `unsafe` label on the function. This is because it uses the `from_raw_parts` method, which is itself unsafe (it doesn't check to make sure that the underlying data look correct). In this case it is safe, because we only want to look at the binary data (not mutate it) and every byte is a valid `u8`.
 
-I could choose to remove the `unsafe` label and put unsafe interally like so, declaring the method safe:
+I could choose to remove the `unsafe` label and put unsafe internally like so, declaring the method safe:
 
 ```rust
 fn typed_to_bytes<T>(slice: &[T]) -> &[u8] {
@@ -72,7 +72,7 @@ unsafe fn bytes_to_typed<T>(slice: &mut [u8]) -> &mut [T] {
 }
 ```
 
-This not only exposes mutable slices, but permits any type at all. Imagine what would happen if `T` was `String`, for example: `String` owns its `[u8]` buffer and cointains a pointer to it. You would be able to dereference arbitrary places in memory! Danger!! Danger!! The `unsafe` label stays on for this one.
+This not only exposes mutable slices, but permits any type at all. Imagine what would happen if `T` was `String`, for example: `String` owns its `[u8]` buffer and contains a pointer to it. You would be able to dereference arbitrary places in memory! Danger!! Danger!! The `unsafe` label stays on for this one.
 
 Imagine you just saw `bytes_to_typed` eat a goat. It is powerful, but the `unsafe` fence protects us. Just like in that movie with all those cautionary tales that I didn't stay for the end of.
 
@@ -137,7 +137,7 @@ impl<T1: Abomonation, T2: Abomonation> Abomonation for (T1, T2) {
 }
 ```
 
-Really, the whole interface is probably just messsing with forces we don't understand.
+Really, the whole interface is probably just messing with forces we don't understand.
 
 For example, you probably don't understand why `exhume` uses a `&[u8]` when we said up above that we were going to use `&mut [u8]`. In retrospect, there were warning signs that something was wrong.
 
@@ -206,13 +206,13 @@ You know, actually it all sort of works.
 
 ## GRAAAaaaoooo?
 
-Yeah, there is a disasterous mess of things here, and really Rust's memory safety isn't touching any of this with a ten foot lifetime bound. But let's talk about the possible issues.
+Yeah, there is a disastrous mess of things here, and really Rust's memory safety isn't touching any of this with a ten foot lifetime bound. But let's talk about the possible issues.
 
 First, let's be clear that `exhume` is `unsafe`. Don't call it. I haven't figured out how to keep people from calling it yet (public traits export all their methods), but just don't. It makes a few assumptions about how it will be called. It assumes that:
 
 1. The `&[u8]` data is, in fact, exclusively held. We go and transmute it to `&mut [u8]` which is very wrong unless we are sure that we have the only reference. Fortunately, `decode` takes a `&mut [u8]` as its argument, and this ensures that our references are exclusive. We are also careful to partition the `&[u8]` into disjoint parts when we use it, to maintain this invariant.
 
-2. The `&mut self` parameter to `exhume` will only be presented outwards as a `&self`. We can't let anyone mutate or own this data. Trying to add elements to `Vec` will trigger a re-alloction, which would attempt to release the memory. It is very important that all references to the data are just that, only references. And references with lifetimes bounded by that of the source `&[u8]`.
+2. The `&mut self` parameter to `exhume` will only be presented outwards as a `&self`. We can't let anyone mutate or own this data. Trying to add elements to `Vec` will trigger a re-allocation, which would attempt to release the memory. It is very important that all references to the data are just that, only references. And references with lifetimes bounded by that of the source `&[u8]`.
 
 3. The `&mut self` parameter to `exhume` will never be dropped. Dropping the `Vec` would attempt to release the backing memory, which ... well it isn't going to work out. Fortunately, there never was a `Vec`. There were some bytes, and we pretended that a reference to the bytes was actually a reference to a `Vec`, but there was never a `Vec` to drop.
 
