--- a/posts/2015-05-12.md
+++ b/posts/2015-05-12.md
@@ -39,7 +39,7 @@ fn group_by<K, V, F, R>(inp: Stream<(K,V)>, red: F) -> Stream<R>
         where F: Fn(&K, &[V], &mut Vec<R>);
 ```
 
-For those of you familar with `map` and `reduce`, the `group_by` function is basically like `reduce`. The operator acts on a stream of key-value pairs, groups incoming pairs by their key value, and applies the reduction function `red` to each non-empty pair of key and matching records.
+For those of you familiar with `map` and `reduce`, the `group_by` function is basically like `reduce`. The operator acts on a stream of key-value pairs, groups incoming pairs by their key value, and applies the reduction function `red` to each non-empty pair of key and matching records.
 
 They way I've done this, it gets a mutable vector of elements `R` and it is supposed to write into them. I'm open to other suggestions. It turns out that writing tasteful interfaces to performant code is hard.
 
