--- a/posts/2015-07-08.md
+++ b/posts/2015-07-08.md
@@ -126,7 +126,7 @@ The worker-level aggregation implementation (#2, above) is our best-performing i
 
 Again, the figure illustrates this: after we have aggregated updates at the worker level, we also aggregate them at the process level. In the example, this reduces the number of messages from 12 to 9.
 
-![Process-level aggregationo implementation of distributed PageRank.](https://github.com/frankmcsherry/blog/blob/master/assets/pr-process-agg.png)
+![Process-level aggregation implementation of distributed PageRank.](https://github.com/frankmcsherry/blog/blob/master/assets/pr-process-agg.png)
 
 We could potentially try and make this implementation even smarter, cutting computation and overlapping communication. However, as we will show in part two of our investigation, we cannot expect a 1G network to win out over 10G even with infinitely fast aggregation.
 
