--- a/posts/2015-08-15.md
+++ b/posts/2015-08-15.md
@@ -127,7 +127,7 @@ Instead, we are going to go in the direction of *awesome*.
 
 Radix sorting works by repeatedly partitioning a sequence of elements into some number of disjoint subsequences. That number is usually 256, and the partitioning is usually based on looking at a byte in each element. After partitioning, you put the subsequences back together in order, and repeat with the next byte.
 
-If you look at it right, radix sort is a bit like counting sort, but used byte-at-a-time. Rather than disassemble the sequence and put it back together, we could just write out to another array at positions determined by accumulating the number of records with each byte. So, it's a bit like counting sort, but with totally different perfomance.
+If you look at it right, radix sort is a bit like counting sort, but used byte-at-a-time. Rather than disassemble the sequence and put it back together, we could just write out to another array at positions determined by accumulating the number of records with each byte. So, it's a bit like counting sort, but with totally different performance.
 
 Each pass of radix sort only sorts based on one byte, but it is a stable sort, so any ties remain in the same order they were in before. If you do multiple passes looking at different bytes, the resulting sequence is ordered first by the byte you last looked at, then by the second most recent byte you examined, etc. Once you've looked at all bytes, the sequence is ordered by the binary representation of each element, assuming you looked at the bytes from least significant to most significant.
 
